# pyconf

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
changelog/: +choices-field.feature.rst  +cli-integration.feature.md  +components-inheritance-bug.bugfix.md  +constraint-rename.removal.rst  +doc-doctests.doc.rst  +docs-examples-doctests.feature.md  +docs-fields-modifiers-polish.feature.md  +field-owned-cli.feature.md  +field-owned-serialization.feature.md  +from-string-to-string.trivial.md  +is-set-unset-reset.feature.md  +normalize-validate-pipeline.feature.md  +remove-toml.removal.md  +table_attrs.feature  +validate-after-update.bugfix.md
docs/: Makefile  advanced.rst  changelog.rst  cli.rst  composition.rst  conf.py  custom-fields.rst  defining.rst  examples.rst  field-modifiers.rst  fields.rst  guide.rst  index.rst  serialization.rst  sharp-edges.rst  using.rst  views.rst
examples/: custom_fields.py  fastapi_integration.py  ml_pipeline.py
src/cfx/: __init__.py  cli.py  config.py  config_field.py  display.py  refs.py  types.py  utils.py  views.py
src/cfx/types/: config_field.py  typed_field.py  types.py
src/pyconf/: .#config_field.py  __init__.py  config.py  config_field.py  types.py
tests/: conftest.py  test_cli.py  test_composition.py  test_config.py  test_config_serialization.py  test_display.py  test_field_cli.py  test_field_factory.py  test_field_serialization.py  test_field_utilities.py  test_fields.py  test_normalize_validate.py  test_serialization.py  test_views.py
