[build-system]
requires = ["setuptools>=77.0.3", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pyconf"
dynamic = ["version"]
description = "Lightweight self-documenting configuration classes via Python descriptors."
readme = "README.md"
authors = [
    { name = "DinoBektesevic", email = "ljetibo@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
yaml = ["pyyaml"]
toml = ["tomli-w"]
all = ["pyyaml", "tomli-w"]
dev = ["pytest", "pyyaml", "tomli-w"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
testpaths = ["tests"]
