[build-system]
requires = ["setuptools>=77.0.3", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "cfx"
dynamic = ["version"]
description = "Lightweight self-documenting configuration classes via Python descriptors."
readme = "README.md"
authors = [
    { name = "DinoBektesevic", email = "ljetibo@gmail.com" }
]
license = "GPL-3.0-only"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
yaml = ["pyyaml"]
toml = ["tomli-w"]
click = ["click"]
all = ["pyyaml", "tomli-w", "click"]
test = ["pytest", "ruff", "pyyaml", "tomli-w", "click"]
docs = [
    "sphinx",
    "sphinx-autoapi",
    "numpydoc",
    "furo",
]
dev = ["cfx[test,docs]", "ruff", "towncrier"]

[project.urls]
Homepage = "https://github.com/DinoBektesevic/cfx"
Documentation = "https://cfx.readthedocs.io/en/latest/"
Repository = "https://github.com/DinoBektesevic/cfx"
Changelog = "https://cfx.readthedocs.io/en/latest/changelog.html"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 79
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # Pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",    # isort
]

[tool.ruff.format]
line-ending = "lf"

[tool.towncrier]
package = "cfx"
package_dir = "src"
filename = "CHANGELOG.md"
directory = "changelog"
issue_format = "https://github.com/DinoBektesevic/cfx/issues/{issue}"

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "removal"
name = "Removals"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "trivial"
name = "Internal"
showcontent = false
